tests/paczka2/big_fuzzy/90804483.err
Error in line 6: M5nJpF3MW A512 38,0
Error in line 11: PEzb2s S14 26,74
Error in line 7: M5nJpF3MW S649 9,4
Error in line 12: 8ks0m2 A512 92,1
Error in line 17: 8ks0m2 S14 40,3
Error in line 16: M5nJpF3MW S733 69,1
Error in line 35: VwIvFjc S649 24,0
Error in line 40: t5MOS3uQGb S649 19,2
Error in line 43: t5MOS3uQGb A512 16,9
Error in line 59: PEzb2s S649 56,3
Error in line 60: M5nJpF3MW S649 56,8
Error in line 73: VwIvFjc A512 -2,2
Error in line 62: S649 S14 61,4
Error in line 71: PEzb2s S733 126,0
Error in line 80: Q8Sy S14 647,4
Error in line 95: PEzb2s S649 60,7
Error in line 96: PEzb2s S14 16,3
Error in line 115: PEzb2s A512 7,1
Error in line 130: PEzb2s S14 -1,8
Error in line 128: Q8Sy S649 38,7
Error in line 127: PEzb2s S14 10,7
Error in line 145: M5nJpF3MW A512 -1,4
Error in line 124: VwIvFjc S733 53,3
Error in line 148: Q8Sy S14 74,5
Error in line 144: M5nJpF3MW A512 21,6
Error in line 154: 8ks0m2 S649 37,1
Error in line 171: t5MOS3uQGb S649 47,5
Error in line 174: t5MOS3uQGb S733 16,8
Error in line 179: S649 S733 63,7
Error in line 183: 8ks0m2 A512 v,4
Error in line 168: 8ks0m2 A512 10,4
Error in line 177: Q8Sy A512 99,9
Error in line 155: VwIvFjc S649 91,6
Error in line 187: Q8Sy S733 38,6
Error in line 192: PEzb2s S733 78,6
Error in line 184: 8ks0m2 S14 90,5
Error in line 201: VwIvFjc S14 19,8
Error in line 202: 8ks0m2 S649 72,1
Error in line 207: 8ks0m2 S14 84,8
Error in line 209: 8ks0m2 S733 68,4
Error in line 214: PEzb2s A512 40,0
Error in line 223: t5MOS3uQGb A512 34,60
Error in line 222: 8ks0m2 S14 63,4
Error in line 233: M5nJpF3MW S14 67,0
Error in line 243: PEzb2s A512 23,4
